# fastapi-multimedia-sharing

./: .gitignore  .pre-commit-config.yaml  Justfile  README.md  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
app/: app.py  main.py
app/api/: router.py
app/api/v1/: router.py
app/api/v1/routes/: posts.py
app/api/v1/schemas/: posts.py
app/core/: bootstrap.py
data/: db.py
tests/app/: test_app.py  test_health.py
tests/app/v1/: test_posts_route.py
